- !!!!:/Protocol/HTTP,/UI/WebCfg,/UI/WebCfgD,/UI/WebVision: HTTP modules auth mechanism moved to Protocol.HTTP from all WEB-modules, separated.
    CSS is made unified.
- FIX:/UI/Web: Access from Web-browser Konqueror 3.5 and 4 final fixed into using AJAX requests by 'Content-Type' setting to 'text/xml; charset=utf-8'.


2009-02-18 Roman
- /XML: Including XML-header to result text by function XMLNode::save is added.
- FIX:/Protocol/HTTP,/UI/WebCfg,/UI/WebCfgD,/UI/WebVision: No inserting and not full processing simbol '\r' into HTTP protocol's end line.
    Fixed work into Konqueror 4.
- FIX:/UI/WebCfgD,/UI/WebVision: XML-header is added to XML-text of result of AJAX XML-request. Fixed work into Konqueror 4.


2009-02-18 Maxim
- !:/UI/WebVision: Conception of filling with the image is completely changed and now it is synchronized with the simple filling with the color for primitive ElFigure.
- FIX:/UI/Vision: Scaling of the widths of the lines in the runtime mode is fixed for the primitive ElFigure.
- FIX:/UI/Vision: Dynamization of the first or second point of the closed arc is fixed for the primitive ElFigure.


2009-02-17 Maxim
- !!:/UI/Vision, UI/WebVision: Transparency of color is added for the primitive ElFigure.
- !!:/UI/WebVision: Conception of painting is changed for primitive ElFigure(every 'fill' and figures from which it consists of
                    are now drawn on their own image and after that the resulting image is formed from the accessorial ones).
- !:/UI/WebVision, UI/Vision: The order of the drawing of the figures is changed for the primitive ElFigure. At first the 'fill' and the figures
                               from which it consists of are drawn, after that with the same way the second 'fill' is drawn and so on... After the.
                              all fills are drawn its the time for other figures to be drawn.
- !:/UI/WebVision: Resampling of the images for 'fill' is added.